# ctsgen3docs

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
docs/: index.md
docs/registers/: api.md  index.md
docs/spi/: api.md  index.md
docs/styles/: custom.css
registers/: index.html
registers/api/: index.html
spi/: index.html
spi/api/: index.html
src/ctsgen3/: ctsplayer.py
src/ctsgen3/registers/: registers.py
src/ctsgen3/spi/: spi.py
